# dict-to-mozc

./: Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  config-zig.toml  config.toml  custom-build.sh  dist-workspace.toml  hinshi-memo.txt  mapping.sh  rust-toolchain.toml
.cargo/: config.toml
.github/: setup.yml
.github/workflows/: release.yaml  release.yml
crates/dict-to-mozc/: Cargo.toml
crates/dict-to-mozc/src/: lib.rs
src/: main.rs
