#cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.package]
version = "0.6.25"
authors = ["Masato TOYOSHIMA", "phoepsilonix <phoepsilonix@gmail.com>"]
edition = "2024"
rust-version = "1.90.0"
homepage = "https://github.com/phoepsilonix/dict-to-mozc"
documentation = "https://github.com/phoepsilonix/dict-to-mozc"
repository = "https://github.com/phoepsilonix/dict-to-mozc"
license = "MIT"

#[package.metadata.dist]
#build-command = ["sh", "./custom-build.sh"]

[workspace.dependencies]
lib-dict-to-mozc = { path = "./crates/dict-to-mozc" }
argh = { version = "0.1.14", default-features = false, features = [ "help" ] }
csv = { version = "1.4.0", default-features = true }
kanaria = { version = "0.2.0", default-features = false }
lazy-regex = { version = "3.6.0", default-features = false, features = [ "perf-dfa", "unicode" ] }
indexmap = { version = "^2.13", default-features = false, features = [ ] }

#indexmap = { version = "^2.4", default-features = false, features = [ ] }
#indexmap = { version = "^2.4", default-features = false, features = [ "std" ] }

mimalloc-rust = { version = "0.2.1", default-features = false }

hashbrown = { version = "^0.16", default-features = false, features = [ "allocator-api2", "default-hasher", "raw-entry"] }
#hashbrown = { version = "^0.16", default-features = true }
#hashbrown = { version = "^0.15", default-features = false, features = [ "allocator-api2", "default-hasher", "raw-entry"] }
#hashbrown = { version = "^0.14", default-features = false, features = [ "ahash", "inline-more"] }
#hashbrown = { version = "^0.14", default-features = false, features = [ "ahash" ] }

#bitflags = "=2.7"
#foldhash = { version = "=0.2", default-features = false, features = [ "std" ] }
#fxhash = { version = "^0.2", default-features = true, features = [] }

#auto-allocator = { version = "*", features = ["secure"], git = "https://github.com/phoepsilonix/auto-allocator.git" }
auto-allocator = { version = "*", features = [], git = "https://github.com/phoepsilonix/auto-allocator.git" }

mimalloc = { version = "0.1.48" }
snmalloc-rs = { version = "0.3.8", features = ["lto"] }
smmalloc = { version = "7.6.4" }
tcmalloc = { version = "0.3.0" }
rpmalloc = "0.2.2"

jemallocator = "0.5.4"

[profile.release]
debug = true
strip = true
overflow-checks = false
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"

[workspace.metadata.release]
allow-branch = ["main"]
shared-version = true
tag = false

[package]
name = "dict-to-mozc"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[patch.crates-io]
#cc = { git = "https://github.com/rust-lang/cc-rs.git", rev = "966183eb651b4ea473cdb32a91120e374f42ba4a" }
#kanaria = { git = "https://github.com/samunohito/kanaria.git", rev = "9c2a6237d5a523f372b50d956671251710d5f4ac" }
# rust 2024 edition
kanaria = { git = "https://github.com/samunohito/kanaria.git", rev = "c98ea3a9af75eb198662bc1483c32201ea3c65b6" }

[dependencies]
lib-dict-to-mozc = { workspace = true }
argh.workspace = true
mimalloc-rust = { workspace = true, optional = true, features = [] , default-features = false }
jemallocator = { workspace = true, optional = true, features = [] , default-features = true }
auto-allocator = { workspace = true, optional = true, features = [], default-features = true }

#csv.workspace = true
#foldhash.workspace = true
#fxhash.workspace = true
#hashbrown.workspace = true
#indexmap.workspace = true
#kanaria.workspace = true
#lazy-regex.workspace = true

# 1st(best)
indexmap = { version = "^2.13", features = [], default-features = false }
hashbrown = { version = "^0.16" , features = [], default-features = false }

# 2nd
#indexmap = { version = "=2.5", features = [], default-features = false }
#hashbrown = { version = "=0.14" , features = [], default-features = false }
#hashbrown = { version = "^0.15" , features = [], default-features = false }

mimalloc = { workspace = true , optional = true }
snmalloc-rs = { workspace = true , optional = true }
tcmalloc = { workspace = true , optional = true }
smmalloc = { workspace = true , optional = true }
rpmalloc = { workspace = true , optional = true }

[package.metadata.release]
tag = true
tag-prefix =""

[[bin]]
name = "dict-to-mozc"

[features]
default = []
use-tcmalloc = ["dep:tcmalloc"]
use-tcmalloc-static = ["tcmalloc/bundled"]

use-jemalloc = ["dep:jemallocator"]
use-snmalloc = ["dep:snmalloc-rs"]
use-smmalloc = ["dep:smmalloc"]
use-rpmalloc = ["dep:rpmalloc"]
use-auto-allocator = ["dep:auto-allocator"]
use-mimalloc-rs = ["dep:mimalloc-rust"]
unstable = [ "unstable-mimalloc" ]
unstable-mimalloc = [ "mimalloc-rust/unstable" ]

use-mimalloc = ["dep:mimalloc"]
