[package]
name = "lib-dict-to-mozc"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
csv = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
kanaria = { workspace = true }
lazy-regex = { workspace = true }
rayon = { workspace = true }
#num_cpus = { workspace = true }
#bitflags = { workspace = true }
#foldhash = { workspace = true }
#fxhash = { workspace = true }
#allocator-api2 = { workspace = true }

[package.metadata.release]
tag = true
tag-prefix =""
